Add lib and config required for the custom security manager, but keep disabled by default